<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="350dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:hint="שם הגרסה"
            android:layout_height="match_parent">

            <EditText
                android:digits="@string/digits_allowed"
                android:id="@+id/dialog_input_text_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="25sp"/>

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:padding="10dp"
        android:background="@color/colorTurquoise">

        <TextView
            android:id="@+id/dialog_input_positive_btn_tv"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/ButtonYellowOvalStyle"
            android:text="@string/save"
            android:layout_marginEnd="5dp"/>

        <TextView
            android:layout_weight="1"
            android:id="@+id/dialog_input_negative_btn_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/ButtonYellowOvalStyle"
            android:text="@string/cancel"
            android:textColor="@color/colorGray"
            android:layout_marginStart="5dp"/>

    </LinearLayout>


</LinearLayout>