<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="400dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">
        <TextView
            android:id="@+id/dialog_three_btns_text_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:background="@color/colorWhite"
            android:textSize="25sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:padding="10dp"
        android:background="@color/colorTurquoise">

        <TextView
            android:layout_weight="1"
            android:id="@+id/dialog_three_btns_cancel_btn_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/ButtonYellowOvalStyle"
            android:text="@string/cancel"
            android:textColor="@color/colorGray"
            android:layout_marginEnd="5dp"/>

        <TextView
            android:layout_weight="1"
            android:id="@+id/dialog_three_btns_negative_btn_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/ButtonYellowOvalStyle"
            android:text="@string/no"
            android:textColor="@color/colorOrange"
            android:layout_marginEnd="5dp"/>

        <TextView
            android:id="@+id/dialog_three_btns_positive_btn_tv"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/ButtonYellowOvalStyle"
            android:text="@string/yes"/>

    </LinearLayout>


</LinearLayout>